# unitig-caller

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  environment.yml  setup.py  unitig_caller-runner.py  unitig_caller.err  unitig_caller.out
conda-recipe/: meta.yaml
src/: CMakeLists.txt  bifrost.cpp  fasta.cpp  fasta.hpp  map_bindings.cpp  map_strings.cpp  map_strings.hpp
test/: 12673_8#26.contigs_velvet.fa  12673_8#27.contigs_velvet.fa  12673_8#28.contigs_velvet.fa  12673_8#29.contigs_velvet.fa  bifrost_query.pyseer  bifrost_query.rtab  bifrost_result.rtab  clean_test.py  refs.txt  run_test.py  simple_refs.txt  simple_results.pyseer  test-calls.py  test_unitigs.fasta  test_unitigs_simple.fasta
unitig-caller/: __init__.py  __main__.py  mantis.py  squeakr.py
unitig_caller/: __init__.py  __main__.py  bifrost.py  mantis.py  original_main.py  squeakr.py
